--- a/MyProject2/Saved/Config/Windows/Engine.ini
+++ b/MyProject2/Saved/Config/Windows/Engine.ini
@@ -34,13 +34,15 @@ bAutoRepair=True
 MaxSendRate=1.000000
 AutoRepairAttemptLimit=10
 bStopServiceWhenAppDeactivates=True
-UnicastEndpoint=0.0.0.0:0
+UnicastEndpoint=25.50.224.74:0
 MulticastEndpoint=230.0.0.1:6666
 MessageFormat=CborPlatformEndianness
 MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+StaticEndpoints=25.48.136.175:6666
+StaticEndpoints=25.89.103.137:6666
 
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/Default.Default"',Map="/Engine/Maps/Templates/Template_Default")
